A little change in coding style